# UTAH_GEANT4

./: .gitignore  CMakeLists.txt  README.md  slurm.sh  slurm_dif.sh
analysis/: Ana.C  Ana.h  DiffusionAnalysis.ipynb  current.txt  getCurrentForLTSpice.C  getCurrentForLTSpice.h  hite.C
analysis/.ipynb_checkpoints/: DiffusionAnalysis-checkpoint.ipynb
app/: CMakeLists.txt  G4_QPIX.cpp
cfg/: vis.mac
macros/: Am241.mac  Am241_config.mac  Am241_init.mac  Co60.macro  electron.mac  electron.macro  electron_config.macro  electron_init.macro  gamma.mac  muon.macro  particle_config.mac  particle_init.mac  slurm_Am241.mac  vis.mac
macros/old/: init_vis.mac  vis.mac
output/: Ana.C  Ana.h  test.h
src/: AnalysisManager.cpp  AnalysisManager.h  BaseGeometry.h  BatchSession.cpp  BatchSession.h  CMakeLists.txt  DetectorConstructForDiffusion.cpp  DetectorConstructForDiffusion.h  DetectorConstruction.cpp  DetectorConstruction.h  DiffusionGenerator.cpp  DiffusionGenerator.h  DiffusionGeometry.cpp  DiffusionGeometry.h  EventAction.cpp  EventAction.h  FactoryBase.h  GeneratorForDiffusion.cpp  GeneratorForDiffusion.h  GenericPhotosensor.cpp  GenericPhotosensor.h  IonGenerator.cpp  IonGenerator.h  LiquidArgonProperties.cpp  LiquidArgonProperties.h  MCParticle.cpp  MCParticle.h  MCPhoton.cpp  MCPhoton.h  MCTruthManager.cpp  MCTruthManager.h  MaterialsList.cpp  MaterialsList.h  OpticalMaterialProperties.cpp  OpticalMaterialProperties.h  PMT.cc  ParticleGenerator.cpp  ParticleGenerator.h  PmtHit.cpp  PmtHit.h  (+23 more)
