
## ---------------------------------------------------------
##  G4_QPIX | src/CMakeLists.txt
##
##  CMake build script.
##   * Author: Justo Martin-Albo
##   * Creation date: 14 Aug 2019
## ---------------------------------------------------------

SET(SRC   AnalysisManager.cpp
        GeneratorParticle.cpp
        MCTruthManager.cpp
        MCParticle.cpp
        DetectorConstructForDiffusion.cpp
        DetectorConstruction.cpp
        GeneratorForDiffusion.cpp
        PrimaryGeneration.cpp
        RunAction.cpp
        EventAction.cpp
        SteppingAction.cpp
        TrackingAction.cpp
        TrackingSD.cpp
        TrackingHit.cpp
        OpticalMaterialProperties.cpp
        LiquidArgonProperties.cpp
        MaterialsList.cpp
        PmtHit.cpp
        PmtSD.cpp
        GenericPhotosensor.cpp

        )

add_library(${CMAKE_PROJECT_NAME} OBJECT ${SRC})
